--- a/index.html
+++ b/index.html
@@ -1,12 +1,60 @@
 <!DOCTYPE html>
-
 <html>
-  <head>
-    <title>Home Page</title>
+  <head lang="en">
+    <meta charset="utf-8">
+    <title>
+      Something
+    </title>
+    <link rel="stylesheet" type="text/css" href="letscss.css"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script type="text/javascript" src="js/jquery-1.4.1.min.js"></script>
+    <script type="text/javascript"></script>
+    <script src="allscript.js"></script>
   </head>
-
   <body>
-
+    <div class="top">
+      <a href="index.html">
+        <img id="logoimage"src="pagelogo2.png"height=7% width=4%/>
+      </a>
+      <ul>
+        <li>
+          <a href="blah.html">
+            Page1
+          </a>
+        </li>
+        <li>
+          <a href="blah.html">
+            Page2
+          </a>
+        </li>
+        <li>
+          <a href="blah.html">
+            Page3
+          </a>
+        </li>
+        <li>
+          <a href="blah.html">
+            Page3
+          </a>
+        </li>
+        <li>
+          <a href="blah.html">
+            Page3
+          </a>
+        </li>
+        <li>
+          <a href="blah.html">
+            Page4
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div>
+      <h1 class="Welcome">Welcome</h1>
+      <img id="sunimage1" src="sunimage.png"/>
+      <img id="bottompic" src="bottompic.png"/>
+      <a href="page1.html"<p class="login">Sign Up<br>Login</p>
+      <a href="page1.html"<h2 class="Begin_Journey">Begin Journey</h2></a>
+    </div>
   </body>
-
 </html>
