--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>
       Something
     </title>
-    <link rel="stylesheet" type="text/css" href="letscss.css"/>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript" src="js/jquery-1.4.1.min.js"></script>
     <script type="text/javascript"></script>
