--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head lang="en">
     <meta charset="utf-8">
     <title>
-      Something
+      {{title}}
     </title>
     <link rel="stylesheet" type="text/css" href="letscss.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
