--- a/index.html
+++ b/index.html
@@ -18,33 +18,33 @@
       </a>
       <ul>
         <li>
-          <a href="blah.html">
+          <a href="blah1.html">
             Page1
           </a>
         </li>
         <li>
-          <a href="blah.html">
+          <a href="blah2.html">
             Page2
           </a>
         </li>
         <li>
-          <a href="blah.html">
+          <a href="blah3.html">
             Page3
           </a>
         </li>
         <li>
-          <a href="blah.html">
-            Page3
-          </a>
-        </li>
-        <li>
-          <a href="blah.html">
-            Page3
-          </a>
-        </li>
-        <li>
-          <a href="blah.html">
+          <a href="blah4.html">
             Page4
+          </a>
+        </li>
+        <li>
+          <a href="blah5.html">
+            Page5
+          </a>
+        </li>
+        <li>
+          <a href="blah6.html">
+            Page5
           </a>
         </li>
       </ul>
