--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <h1 class="Welcome">Welcome</h1>
       <img id="sunimage1" src="sunimage.png"/>
       <img id="bottompic" src="bottompic.png"/>
-      <a href="page1.html"<p class="login">Sign Up<br>Login</p>
+      <a href="/login"<p class="login">Sign Up/Login</p>
       <a href="page1.html"<h2 class="Begin_Journey">Begin Journey</h2></a>
     </div>
   </body>
