--- a/html/login.html
+++ b/html/login.html
@@ -1,7 +1,67 @@
 <!DOCTYPE html>
 <html>
-  <title>
-    Login/Signup!
-  </title>
-
+  <head lang="en">
+    <meta charset="utf-8">
+    <title>
+      Login/Signup!
+    </title>
+    <link rel="stylesheet" type="text/css" href="cssfile.css"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script type="text/javascript" src="js/jquery-1.4.1.min.js"></script>
+    <script type="text/javascript"></script>
+    <script src="allscript.js"></script>
+    <audio id="soundfile"controls="controls">
+      <source src="soundtrack.mp3" type="audio/mpeg" />
+    </audio>
+  </head>
+  <body>
+    <div class="top">
+      <a href="index.html">
+        <img id="logoimage"src="pagelogo2.png"height=7% width=4%/>
+      </a>
+      <ul>
+        <li>
+          <a href="page1.html">
+            Page1
+          </a>
+        </li>
+        <li>
+          <a href="jhjghfg.html">
+            Page2
+          </a>
+        </li>
+        <li>
+          <a href="jkhjghfgcv.html">
+            Page3
+          </a>
+        </li>
+        <li>
+          <a href="ytfghj.html">
+            Page3
+          </a>
+        </li>
+        <li>
+          <a href="gxfghj.html">
+            Page3
+          </a>
+        </li>
+        <li>
+          <a href="ygdh.html">
+            Page4
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div>
+      <h1 class="signup1">Sign up</h1>
+      <h1 class="login1">Login</h1>
+      <img class="FadeOutI1"
+      id="MainImage2"src="homecover1.png"/>
+      <img id="sunimage1" src="sunimage.png"/>
+      <img id="signup2" src="signup.png"/>
+      <img id="signup3" src="signup.png"/>
+      <a href="signup.html"<p class="login">Sign Up<br>Login</p>
+      <a href="index.html"<h2 class="returntohome">Return</h2></a>
+    </div>
+  </body>
 </html>
