--- a/html/title.html
+++ b/html/title.html
@@ -51,8 +51,8 @@
     </div>
     <div>
       <h1 class="Welcome">Welcome</h1>
-      <img id="sunimage1" src="sunimage.png"/>
-      <img id="bottompic" src="bottompic.png"/>
+      <img id="sunimage1" src="../photos/sunimage.png"/>
+      <img id="bottompic" src="../photos/bottompic.png"/>
       <a href="/login"<p class="login">Sign Up/Login</p>
       <a href="page1.html"<h2 class="Begin_Journey">Begin Journey</h2></a>
     </div>
