home page edits

--- a/html/home.html
+++ b/html/home.html
@@ -1,9 +1,65 @@
 <!DOCTYPE html>
 <html>
-  <title>
-    Home!
-  </title>
+  <head lang="en">
+    <meta charset="utf-8">
+    <title>
+      Home
+    </title>
+    <link rel="stylesheet" type="text/css" href="../css/home.css"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script type="text/javascript" src="js/jquery-1.4.1.min.js"></script>
+    <script type="text/javascript"></script>
+    <script src="../javascript/allscript.js"></script>
+  </head>
   <body>
-    Check Check
+    <div class="top">
+      <a href="index.html">
+        <img id="logoimage"src="pagelogo2.png"height=7% width=4%/>
+      </a>
+      <ul>
+        <li>
+          <a href="blah1.html">
+            Page1
+          </a>
+        </li>
+        <li>
+          <a href="blah2.html">
+            Page2
+          </a>
+        </li>
+        <li>
+          <a href="blah3.html">
+            Page3
+          </a>
+        </li>
+        <li>
+          <a href="blah4.html">
+            Page4
+          </a>
+        </li>
+        <li>
+          <a href="blah5.html">
+            Page5
+          </a>
+        </li>
+        <li>
+          <a href="blah6.html">
+            Page6
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div>
+      <h1 class="Welcome"></h1>
+      <p id="Math">Math</p>
+      <p id="Science">Science</p>
+      <p id="History">History</p>
+      <p id="Comp">Comp</p>
+      <img id="algebracircle" src="../photos/algebracircle.png"/>
+      <img id="geometrycircle" src="../photos/geometrycircle.png"/>
+      <img id="trigcircle" src="../photos/trigcircle.png"/>
+      <img id="bottompic" src="../photos/circlenav.png"/>
+      <a href="/login"<p class="login">Sign Up/Login</p>
+    </div>
   </body>
 </html>
