--- a/html/home.html
+++ b/html/home.html
@@ -23,27 +23,27 @@
           </a>
         </li>
         <li>
-          <a href="blah2.html">
+          <a href="#">
             Page2
           </a>
         </li>
         <li>
-          <a href="blah3.html">
+          <a href="#">
             Page3
           </a>
         </li>
         <li>
-          <a href="blah4.html">
+          <a href="#">
             Page4
           </a>
         </li>
         <li>
-          <a href="blah5.html">
+          <a href="#">
             Page5
           </a>
         </li>
         <li>
-          <a href="blah6.html">
+          <a href="#">
             Page6
           </a>
         </li>
@@ -58,6 +58,15 @@
       <img id="algebracircle" src="../photos/algebracircle.png"/>
       <img id="geometrycircle" src="../photos/geometrycircle.png"/>
       <img id="trigcircle" src="../photos/trigcircle.png"/>
+      <img id="biocircle" src="../photos/biocircle.png"/>
+      <img id="chemcircle" src="../photos/chemcircle.png"/>
+      <img id="physicscircle" src="../photos/physicscircle.png"/>
+      <img id="history1" src="../photos/history1.png"/>
+      <img id="history2" src="../photos/history2.png"/>
+      <img id="history3" src="../photos/history3.png"/>
+      <img id="html" src="../photos/html.png"/>
+      <img id="css" src="../photos/css.png"/>
+      <img id="javascript" src="../photos/javascript.png"/>
       <img id="bottompic" src="../photos/circlenav.png"/>
       <a href="/login"<p class="login">Sign Up/Login</p>
     </div>
