--- a/html/title.html
+++ b/html/title.html
@@ -18,7 +18,7 @@
       </a>
       <ul>
         <li>
-          <a href="blah1.html">
+          <a href="#">
             Page1
           </a>
         </li>
