--- a/html/home.html
+++ b/html/home.html
@@ -51,22 +51,22 @@
     </div>
     <div>
       <h1 class="Welcome"></h1>
-      <p id="Math">Math</p>
-      <p id="Science">Science</p>
-      <p id="History">History</p>
-      <p id="Comp">Comp</p>
-      <img id="algebracircle" src="../photos/algebracircle.png"/>
-      <img id="geometrycircle" src="../photos/geometrycircle.png"/>
-      <img id="trigcircle" src="../photos/trigcircle.png"/>
-      <img id="biocircle" src="../photos/biocircle.png"/>
-      <img id="chemcircle" src="../photos/chemcircle.png"/>
-      <img id="physicscircle" src="../photos/physicscircle.png"/>
-      <img id="history1" src="../photos/history1.png"/>
-      <img id="history2" src="../photos/history2.png"/>
-      <img id="history3" src="../photos/history3.png"/>
-      <img id="html" src="../photos/html.png"/>
-      <img id="css" src="../photos/css.png"/>
-      <img id="javascript" src="../photos/javascript.png"/>
+      <p class="bubbles" id="Math">Math</p>
+      <p class="bubbles" id="Science">Science</p>
+      <p class="bubbles" id="History">History</p>
+      <p class="bubbles" id="Comp">Comp</p>
+      <img class="bubbles" id="algebracircle" src="../photos/algebracircle.png"/>
+      <img class="bubbles" id="geometrycircle" src="../photos/geometrycircle.png"/>
+      <img class="bubbles" id="trigcircle" src="../photos/trigcircle.png"/>
+      <img class="bubbles" id="biocircle" src="../photos/biocircle.png"/>
+      <img class="bubbles" id="chemcircle" src="../photos/chemcircle.png"/>
+      <img class="bubbles" id="physicscircle" src="../photos/physicscircle.png"/>
+      <img class="bubbles" id="history1" src="../photos/history1.png"/>
+      <img class="bubbles" id="history2" src="../photos/history2.png"/>
+      <img class="bubbles" id="history3" src="../photos/history3.png"/>
+      <img class="bubbles" id="comp1" src="../photos/comp1circle.png"/>
+      <img class="bubbles" id="comp2" src="../photos/comp2circle.png"/>
+      <img class="bubbles" id="comp3" src="../photos/comp3circle.png"/>
       <img id="bottompic" src="../photos/circlenav.png"/>
       <a href="/login"<p class="login">Sign Up/Login</p>
     </div>
