edit to yaml file

--- a/html/home.html
+++ b/html/home.html
@@ -51,6 +51,7 @@
     </div>
     <div>
       <h1 class="Welcome"></h1>
+      <img id="sunimage1" src="../photos/bottompic.png"/>
       <p class="bubbles" id="Math">Math</p>
       <p class="bubbles" id="Science">Science</p>
       <p class="bubbles" id="History">History</p>
