--- a/html/home.html
+++ b/html/home.html
@@ -14,7 +14,7 @@
   <body>
     <div class="top">
       <a href="index.html">
-        <img id="logoimage"src="pagelogo2.png"height=7% width=4%/>
+        <img id="logoimage"src="../photos/pagelogo2.png"height=7% width=4%/>
       </a>
       <ul>
         <li>
