--- a/html/title.html
+++ b/html/title.html
@@ -14,7 +14,7 @@
   <body>
     <div class="top">
       <a href="index.html">
-        <img id="logoimage"src="pagelogo2.png"height=7% width=4%/>
+        <img id="logoimage"src="../photos/pagelogo2.png"height=7% width=4%/>
       </a>
       <ul>
         <li>
@@ -23,27 +23,27 @@
           </a>
         </li>
         <li>
-          <a href="blah2.html">
+          <a href="#">
             Page2
           </a>
         </li>
         <li>
-          <a href="blah3.html">
+          <a href="#">
             Page3
           </a>
         </li>
         <li>
-          <a href="blah4.html">
+          <a href="#">
             Page4
           </a>
         </li>
         <li>
-          <a href="blah5.html">
-            Page5
+          <a href="#">
+            Home
           </a>
         </li>
         <li>
-          <a href="blah6.html">
+          <a href="#">
             Page6
           </a>
         </li>
@@ -54,7 +54,7 @@
       <img id="sunimage1" src="../photos/bottompic.png"/>
       <img id="bottompic" src="../photos/bottompic.png"/>
       <a href="/login"<p class="login">Sign Up/Login</p>
-      <a href="home.html"<h2 class="Begin_Journey">Begin Journey</h2></a>
+      <a href="home"<h2 class="Begin_Journey">Begin Journey</h2></a>
     </div>
   </body>
 </html>
