--- a/html/home.html
+++ b/html/home.html
@@ -13,12 +13,12 @@
   </head>
   <body>
     <div class="top">
-      <a href="index.html">
+      <a href="/">
         <img id="logoimage"src="../photos/pagelogo2.png"height=7% width=4%/>
       </a>
       <ul>
         <li>
-          <a href="blah1.html">
+          <a href="#">
             Page1
           </a>
         </li>
