--- a/html/title.html
+++ b/html/title.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="top">
-      <a href="index.html">
+      <a href="/">
         <img id="logoimage"src="../photos/pagelogo2.png"height=7% width=4%/>
       </a>
       <ul>
