--- a/html/login.html
+++ b/html/login.html
@@ -5,7 +5,7 @@
     <title>
       Login/Signup!
     </title>
-    <link rel="stylesheet" type="text/css" href="../css/home.css"/>
+    <link rel="stylesheet" type="text/css" href="../css/login.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript" src="js/jquery-1.4.1.min.js"></script>
     <script type="text/javascript"></script>
@@ -54,12 +54,34 @@
     </div>
     <div>
       <h1 class="signup1">Sign up</h1>
-      <h1 class="login1">Login</h1>
+      <h1 class="login1">Login!</h1>
       <img class="FadeOutI1"
       id="MainImage2"src="../photos/homecover2.png"/>
       <!-- <img id="signup2" src="../photos/signup.png"/>
       <img id="signup3" src="../photos/signup.png"/> -->
       <!-- <a href="signup.html"<p class="login">Sign Up<br>Login</p> -->
+
+    <!-- Login Form -->
+      <form action = "/login" method="post">
+        <div>Email: <input name="email"></input></div>
+        <div>Password: <input name="password"></input></div>
+        <div></div>
+        </div>
+        <div><input type="submit" value="Log in"></div>
+      </form>
+
+    <!-- Signup Form -->
+      <form action = "/login" method="post">
+        <div>Full Name: <input name="fullname"></input></div>
+        <div>Email: <input name="email"></input></div>
+        <div>Password: <input name="password"></input></div>
+        <div></div>
+        </div>
+
+        <div><input type="submit" value="Create Account"></div>
+      </form>
+
+      <div></div>
       <a href="/"<h2 class="returntohome">Return</h2></a>
     </div>
   </body>
