Adding for loop

--- a/html/subject.html
+++ b/html/subject.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <title>
-    Subject!
-    <!-- {{subject}}! -->
-  </title>
-{{link}}
+  <head>
+    <title>{{subject}}</title>
+  </head>
+  <body>
+    {% for course in coursera_courses}
+    
+    {% endfor %}
+  </body>
 </html>
