recent css and javascript changes

--- a/html/title.html
+++ b/html/title.html
@@ -18,7 +18,7 @@
       </a>
       <ul>
         <li>
-          <a href="#">
+          <a href="login.html">
             Page1
           </a>
         </li>
@@ -53,7 +53,7 @@
       <h1 class="Welcome">Welcome</h1>
       <img id="sunimage1" src="../photos/bottompic.png"/>
       <img id="bottompic" src="../photos/bottompic.png"/>
-      <a href="/login"<p class="login">Sign Up/Login</p>
+      <a href="login.html"<p class="login">Sign Up/Login</p>
       <a href="home.html"<h2 class="Begin_Journey">Begin Journey</h2></a>
     </div>
   </body>
