--- a/html/login.html
+++ b/html/login.html
@@ -5,11 +5,11 @@
     <title>
       Login/Signup!
     </title>
-    <link rel="stylesheet" type="text/css" href="cssfile.css"/>
+    <link rel="stylesheet" type="text/css" href="../css/login.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript" src="js/jquery-1.4.1.min.js"></script>
     <script type="text/javascript"></script>
-    <script src="allscript.js"></script>
+    <script src="../javascript/allscript.js"></script>
     <audio id="soundfile"controls="controls">
       <source src="soundtrack.mp3" type="audio/mpeg" />
     </audio>
