Linking up subject buttons to their pages

--- a/html/home.html
+++ b/html/home.html
@@ -56,12 +56,12 @@
       <p class="bubbles" id="Science">Science</p>
       <p class="bubbles" id="History">History</p>
       <p class="bubbles" id="Comp">Comp</p>
-      <img class="bubbles" id="algebracircle" src="../photos/algebracircle.png"/>
-      <img class="bubbles" id="geometrycircle" src="../photos/geometrycircle.png"/>
-      <img class="bubbles" id="trigcircle" src="../photos/trigcircle.png"/>
-      <img class="bubbles" id="biocircle" src="../photos/biocircle.png"/>
-      <img class="bubbles" id="chemcircle" src="../photos/chemcircle.png"/>
-      <img class="bubbles" id="physicscircle" src="../photos/physicscircle.png"/>
+      <a href ="../subject?search=algebra"> <img class="bubbles" id="algebracircle" src="../photos/algebracircle.png"/> </a>
+      <a href ="../subject?search=geometry"> <img class="bubbles" id="geometrycircle" src="../photos/geometrycircle.png"/> </a>
+      <a href ="../subject?search=trigonometry"> <img class="bubbles" id="trigcircle" src="../photos/trigcircle.png"/> </a>
+      <a href ="../subject?search=biology"> <img class="bubbles" id="biocircle" src="../photos/biocircle.png"/> </a>
+      <a href ="../subject?search=chemistry"> <img class="bubbles" id="chemcircle" src="../photos/chemcircle.png"/> </a>
+      <a href ="../subject?search=physics"> <img class="bubbles" id="physicscircle" src="../photos/physicscircle.png"/> </a>
       <img class="bubbles" id="history1" src="../photos/history1.png"/>
       <img class="bubbles" id="history2" src="../photos/history2.png"/>
       <img class="bubbles" id="history3" src="../photos/history3.png"/>
