--- a/html/home.html
+++ b/html/home.html
@@ -69,7 +69,7 @@
       <img class="bubbles" id="comp2" src="../photos/comp2circle.png"/>
       <img class="bubbles" id="comp3" src="../photos/comp3circle.png"/>
       <img id="bottompic" src="../photos/circlenav.png"/>
-      <a href="login.html"<p class="login">Sign Up/Login</p>
+      <a href="/login"<p class="login">Sign Up/Login</p>
     </div>
   </body>
 </html>
