--- a/html/title.html
+++ b/html/title.html
@@ -53,13 +53,10 @@
       <h1 class="Welcome">Welcome</h1>
       <img id="sunimage1" src="../photos/bottompic.png"/>
       <img id="bottompic" src="../photos/bottompic.png"/>
-<<<<<<< HEAD
-      <a href="login.html"<p class="login">Sign Up/Login</p>
-      <a href="home.html"<h2 class="Begin_Journey">Begin Journey</h2></a>
-=======
-      <a href="/login"<p class="login">Sign Up/Login</p>
-      <a href="home"<h2 class="Begin_Journey">Begin Journey</h2></a>
->>>>>>> d501d2418560eff5d4f154126846fa3f55f8d14e
+
+      <a href="/login"<p class="login">Sign Up/Login</p></a>
+      <a href="/home"<h2 class="Begin_Journey">Begin Journey</h2></a>
+
     </div>
   </body>
 </html>
