--- a/html/subject.html
+++ b/html/subject.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!--<link rel="stylesheet" type="text/css" href="../css/subject.css"/>-->
+    <link rel="stylesheet" type="text/css" href="../css/subject.css"/>
     <!--Billy here, I added this style sheet^ and it made it really weird.-->
     <title>{{subject}}</title>
   </head>
