Cleaning up main.py

--- a/html/subject.html
+++ b/html/subject.html
@@ -3,7 +3,7 @@
   <head>
     <!-- <link rel="stylesheet" type="text/css" href="../css/subject.css"/> -->
     <!--Billy here, I added this style sheet^ and it made it really weird.-->
-    <title>{{subject}}</title>
+    <title>{{subject.capitalize()}}</title>
   </head>
   <body>
     <p>Coursera:</p>
@@ -15,13 +15,5 @@
     <br>
     <br>
     <p>Khan Academy:</p>
-    <ul>
-      {% for name, link in khan_courses.items() %}
-        <li><a href={{link}}> {{name}}</a></li>
-      {% endfor %}
-    </ul>
-    <br>
-    <br>
-
   </body>
 </html>
