--- a/html/subject.html
+++ b/html/subject.html
@@ -6,6 +6,7 @@
     <title>{{subject.capitalize()}}</title>
   </head>
   <body>
+    <h1>{{subject.capitalize()}}</h1>
     <p>Coursera:</p>
     <ul>
       {% for name, link in coursera_courses.items() %}
