Edit comp sci and history bubbles

--- a/html/home.html
+++ b/html/home.html
@@ -62,11 +62,11 @@
       <a href ="../subject?search=biology"> <img class="bubbles" id="biocircle" src="../photos/biocircle.png"/> </a>
       <a href ="../subject?search=chemistry"> <img class="bubbles" id="chemcircle" src="../photos/chemcircle.png"/> </a>
       <a href ="../subject?search=physics"> <img class="bubbles" id="physicscircle" src="../photos/physicscircle.png"/> </a>
-      <img class="bubbles" id="history1" src="../photos/history1.png"/>
-      <img class="bubbles" id="history2" src="../photos/history2.png"/>
-      <img class="bubbles" id="history3" src="../photos/history3.png"/>
-      <img class="bubbles" id="comp1" src="../photos/comp1circle.png"/>
-      <img class="bubbles" id="comp2" src="../photos/comp2circle.png"/>
+      <a href ="../subject?search=history"> <img class="bubbles" id="history1" src="../photos/history1.png"/> </a>
+      <!-- <img class="bubbles" id="history2" src="../photos/history2.png"/>
+      <img class="bubbles" id="history3" src="../photos/history3.png"/> -->
+      <a href ="../subject?search=computer+programming"> <img class="bubbles" id="comp1" src="../photos/comp1circle.png"/> </a>
+      <a href ="../subject?search=computer+science"> <img class="bubbles" id="comp2" src="../photos/comp2circle.png"/> </a>
       <img class="bubbles" id="comp3" src="../photos/comp3circle.png"/>
       <img id="bottompic" src="../photos/circlenav.png"/>
       <a href="login"<p class="login">Sign Up/Login</p>
