--- a/html/subject.html
+++ b/html/subject.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- <link rel="stylesheet" type="text/css" href="../css/subject.css"/> -->
-    <!--Billy here, I added this style sheet^ and it made it really weird.-->
+    <head lang="en">
+      <meta charset="utf-8">
+      <title>
+        Subject
+      </title>
+      <link rel="stylesheet" type="text/css" href="../css/subject.css"/>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+      <script type="text/javascript" src="js/jquery-1.4.1.min.js"></script>
+      <script type="text/javascript"></script>
+      <script src="../javascript/allscript.js"></script>
     <title>{{subject.capitalize()}}</title>
   </head>
   <body>
