--- a/html/subject.html
+++ b/html/subject.html
@@ -14,6 +14,44 @@
     <title>{{subject.capitalize()}}</title>
   </head>
   <body>
+    <div class="top">
+      <a href="/">
+        <img id="logoimage"src="../photos/pagelogo2.png"height=7% width=4%/>
+      </a>
+      <ul>
+        <li>
+          <a href="#">
+            Page1
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            Page2
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            Page3
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            Page4
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            Page5
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            Page6
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div>
     <h1>{{subject.capitalize()}}</h1>
     <h3>Coursera:</h3>
     <ul>
