--- a/html/home.html
+++ b/html/home.html
@@ -65,8 +65,8 @@
       <a href ="../subject?search=history"> <img class="bubbles" id="history1" src="../photos/history1.png"/> </a>
       <!-- <img class="bubbles" id="history2" src="../photos/history2.png"/>
       <img class="bubbles" id="history3" src="../photos/history3.png"/> -->
-      <a href ="../subject?search=computer+programming"> <img class="bubbles" id="comp1" src="../photos/comp1circle.png"/> </a>
-      <a href ="../subject?search=computer+science"> <img class="bubbles" id="comp2" src="../photos/comp2circle.png"/> </a>
+      <a href ="../subject?search=computer-programming"> <img class="bubbles" id="comp1" src="../photos/comp1circle.png"/> </a>
+      <a href ="../subject?search=computer-science"> <img class="bubbles" id="comp2" src="../photos/comp2circle.png"/> </a>
       <img class="bubbles" id="comp3" src="../photos/comp3circle.png"/>
       <img id="bottompic" src="../photos/circlenav.png"/>
       <a href="login"<p class="login">Sign Up/Login</p>
