--- a/html/subject.html
+++ b/html/subject.html
@@ -11,7 +11,7 @@
       <script type="text/javascript" src="js/jquery-1.4.1.min.js"></script>
       <script type="text/javascript"></script>
       <script src="../javascript/allscript.js"></script>
-    <title>{{subject.capitalize()}}</title>
+    <title>{{subject.title()}}</title>
   </head>
   <body>
     <div class="top">
@@ -52,7 +52,7 @@
       </ul>
     </div>
     <div>
-    <h1>{{subject.capitalize()}}</h1>
+    <h1>{{subject.replace("-", " ").title()}}</h1>
     <h3>Coursera:</h3>
     <ul>
       {% for name, link in coursera_courses.items() %}
