subject html changes

--- a/html/subject.html
+++ b/html/subject.html
@@ -51,7 +51,7 @@
         </li>
       </ul>
     </div>
-    <div>
+    <div id="pagelinks">
     <h1>{{subject.capitalize()}}</h1>
     <h3>Coursera:</h3>
     <ul>
