changes to subject html and css

--- a/html/subject.html
+++ b/html/subject.html
@@ -6,7 +6,7 @@
       <title>
         Subject
       </title>
-      <!-- <link rel="stylesheet" type="text/css" href="../css/subject.css"/> -->
+      <link rel="stylesheet" type="text/css" href="../css/subject.css"/>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
       <script type="text/javascript" src="js/jquery-1.4.1.min.js"></script>
       <script type="text/javascript"></script>
@@ -51,7 +51,6 @@
         </li>
       </ul>
     </div>
-    <div id="pagelinks">
     <h1>{{subject.replace("-", " ").title()}}</h1>
     <h3>Coursera:</h3>
     <ul>
