--- a/html/title.html
+++ b/html/title.html
@@ -11,6 +11,7 @@
     <script type="text/javascript"></script>
     <script src="../javascript/allscript.js"></script>
   </head>
+  <div style="min-width: 960px; margin: 0 auto;">
   <body>
     <div class="top">
       <a href="/">
@@ -53,10 +54,8 @@
       <h1 class="Welcome">Welcome</h1>
       <img id="sunimage1" src="../photos/bottompic.png"/>
       <img id="bottompic" src="../photos/bottompic.png"/>
-
       <a href="/login"<p class="login">Sign Up/Login</p></a>
       <a href="/home"<h2 class="Begin_Journey">Begin Journey</h2></a>
-
     </div>
   </body>
 </html>
