--- a/html/title.html
+++ b/html/title.html
@@ -24,8 +24,8 @@
           </a>
         </li>
         <li>
-          <a href="#">
-            Page2
+          <a href="users.html">
+            Users
           </a>
         </li>
         <li>
