--- a/html/users.html
+++ b/html/users.html
@@ -51,7 +51,7 @@
       </ul>
     </div>
     <div>
-      <h1 class="Welcome">Welcome</h1>
+      <h1 class="Welcome">Profile</h1>
       <img id="sunimage1" src="../photos/bottompic.png"/>
       <img id="bottompic" src="../photos/bottompic.png"/>
       <a href="/login"<p class="login">Sign Up/Login</p></a>
