Fixed bubbles in home

--- a/html/home.html
+++ b/html/home.html
@@ -7,8 +7,6 @@
     </title>
     <link rel="stylesheet" type="text/css" href="../css/home.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script type="text/javascript" src="js/jquery-1.4.1.min.js"></script>
-    <script type="text/javascript"></script>
     <script src="../javascript/allscript.js"></script>
   </head>
   <body>
@@ -55,19 +53,19 @@
       <p class="bubbles" id="Math">Math</p>
       <p class="bubbles" id="Science">Science</p>
       <p class="bubbles" id="History">History</p>
-      <p class="bubbles" id="Comp">Comp</p>
-      <a href ="../subject?search=algebra"> <img class="bubbles" class = "mathbubbles" id="algebracircle" src="../photos/algebracircle.png"/> </a>
-      <a href ="../subject?search=geometry"> <img class="bubbles" class = "mathbubbles" id="geometrycircle" src="../photos/geometrycircle.png"/> </a>
-      <a href ="../subject?search=trigonometry"> <img class="bubbles" class = "mathbubbles" id="trigcircle" src="../photos/trigcircle.png"/> </a>
-      <a href ="../subject?search=biology"> <img class="bubbles" class = "sciencebubbles" id="biocircle" src="../photos/biocircle.png"/> </a>
-      <a href ="../subject?search=chemistry"> <img class="bubbles" class = "sciencebubbles" id="chemcircle" src="../photos/chemcircle.png"/> </a>
-      <a href ="../subject?search=physics"> <img class="bubbles" class = "sciencebubbles" id="physicscircle" src="../photos/physicscircle.png"/> </a>
-      <a href ="../subject?search=history"> <img class="bubbles" class = "historybubbles" id="history1" src="../photos/history1.png"/> </a>
+      <p class="bubbles" id="Comp">Comp Sci</p>
+      <a href ="../subject?search=algebra"> <img class="bubbles subj mathbubbles" id="algebracircle" src="../photos/algebracircle.png"/> </a>
+      <a href ="../subject?search=geometry"> <img class="bubbles subj mathbubbles" id="geometrycircle" src="../photos/geometrycircle.png"/> </a>
+      <a href ="../subject?search=trigonometry"> <img class="bubbles subj mathbubbles" id="trigcircle" src="../photos/trigcircle.png"/> </a>
+      <a href ="../subject?search=biology"> <img class="bubbles subj sciencebubbles" id="biocircle" src="../photos/biocircle.png"/> </a>
+      <a href ="../subject?search=chemistry"> <img class="bubbles subj sciencebubbles" id="chemcircle" src="../photos/chemcircle.png"/> </a>
+      <a href ="../subject?search=physics"> <img class="bubbles subj sciencebubbles" id="physicscircle" src="../photos/physicscircle.png"/> </a>
+      <a href ="../subject?search=history"> <img class="bubbles subj historybubbles" id="history1" src="../photos/history1.png"/> </a>
       <!-- <img class="bubbles" id="history2" src="../photos/history2.png"/>
       <img class="bubbles" id="history3" src="../photos/history3.png"/> -->
-      <a href ="../subject?search=computer-programming"> <img class="bubbles" class = "csbubbles" id="comp1" src="../photos/comp1circle.png"/> </a>
-      <a href ="../subject?search=computer-science"> <img class="bubbles" class = "csbubbles" id="comp2" src="../photos/comp2circle.png"/> </a>
-      <img class="bubbles" id="comp3" src="../photos/comp3circle.png"/>
+      <a href ="../subject?search=computer-programming"> <img class="bubbles subj csbubbles" id="comp1" src="../photos/comp1circle.png"/> </a>
+      <a href ="../subject?search=computer-science"> <img class="bubbles subj csbubbles" id="comp2" src="../photos/comp2circle.png"/> </a>
+      <!-- <img class="bubbles" id="comp3" src="../photos/comp3circle.png"/> -->
       <img id="bottompic" src="../photos/circlenav.png"/>
       <a href="login"<p class="login">Sign Up/Login</p>
     </div>
