--- a/html/home.html
+++ b/html/home.html
@@ -50,10 +50,12 @@
     <div>
       <h1 class="Welcome"></h1>
       <img id="sunimage1" src="../photos/bottompic.png"/>
-      <p class="bubbles" id="Math">Math</p>
-      <p class="bubbles" id="Science">Science</p>
-      <p class="bubbles" id="History">History</p>
-      <p class="bubbles" id="Comp">Comp Sci</p>
+      <div class = "mainbubbles">
+        <p class="bubbles" id="Math">Math</p>
+        <p class="bubbles" id="Science">Science</p>
+        <p class="bubbles" id="History">History</p>
+        <p class="bubbles" id="Comp">Comp Sci</p>
+      </div>
       <a href ="../subject?search=algebra"> <img class="bubbles subj mathbubbles" id="algebracircle" src="../photos/algebracircle.png"/> </a>
       <a href ="../subject?search=geometry"> <img class="bubbles subj mathbubbles" id="geometrycircle" src="../photos/geometrycircle.png"/> </a>
       <a href ="../subject?search=trigonometry"> <img class="bubbles subj mathbubbles" id="trigcircle" src="../photos/trigcircle.png"/> </a>
