most recent edits to home page

--- a/html/home.html
+++ b/html/home.html
@@ -49,11 +49,19 @@
     </div>
     <div>
       <h1 class="Welcome"></h1>
+    </div>
+    <div>
       <img id="sunimage1" src="../photos/bottompic.png"/>
-      <p class="bubbles" id="Math">Math</p>
-      <p class="bubbles" id="Science">Science</p>
-      <p class="bubbles" id="History">History</p>
-      <p class="bubbles" id="Comp">Comp Sci</p>
+    </div>
+    <div class="main-nav-wrapper">
+      <div class="main-nav">
+        <div class="bubbles" id="Math"><div>Math</div></div>
+        <div class="bubbles" id="Science"><div>Science</div></div>
+        <div class="bubbles" id="History"><div>History</div></div>
+        <div class="bubbles" id="Comp"><div>Comp Sci</div></div>
+      </div>
+    </div>
+    <div>
       <a href ="../subject?search=algebra"> <img class="bubbles subj mathbubbles" id="algebracircle" src="../photos/algebracircle.png"/> </a>
       <a href ="../subject?search=geometry"> <img class="bubbles subj mathbubbles" id="geometrycircle" src="../photos/geometrycircle.png"/> </a>
       <a href ="../subject?search=trigonometry"> <img class="bubbles subj mathbubbles" id="trigcircle" src="../photos/trigcircle.png"/> </a>
@@ -65,9 +73,8 @@
       <img class="bubbles" id="history3" src="../photos/history3.png"/> -->
       <a href ="../subject?search=computer-programming"> <img class="bubbles subj csbubbles" id="comp1" src="../photos/comp1circle.png"/> </a>
       <a href ="../subject?search=computer-science"> <img class="bubbles subj csbubbles" id="comp2" src="../photos/comp2circle.png"/> </a>
+     </div>
       <!-- <img class="bubbles" id="comp3" src="../photos/comp3circle.png"/> -->
-      <img id="bottompic" src="../photos/circlenav.png"/>
       <a href="login"<p class="login">Sign Up/Login</p>
-    </div>
   </body>
 </html>
