add pointer cursor to bubbles

--- a/html/home.html
+++ b/html/home.html
@@ -52,7 +52,6 @@
     </div>
     <div>
       <img id="sunimage1" src="../photos/bottompic.png"/>
-<<<<<<< HEAD
     </div>
     <div class="main-nav-wrapper">
       <div class="main-nav">
@@ -63,14 +62,12 @@
       </div>
     </div>
     <div>
-=======
-      <div class = "mainbubbles">
+      <!-- <div class = "mainbubbles">
         <p class="bubbles" id="Math">Math</p>
         <p class="bubbles" id="Science">Science</p>
         <p class="bubbles" id="History">History</p>
         <p class="bubbles" id="Comp">Comp Sci</p>
-      </div>
->>>>>>> 22140f9595ce39e2cce361968abab17e0a5e1439
+      </div> -->
       <a href ="../subject?search=algebra"> <img class="bubbles subj mathbubbles" id="algebracircle" src="../photos/algebracircle.png"/> </a>
       <a href ="../subject?search=geometry"> <img class="bubbles subj mathbubbles" id="geometrycircle" src="../photos/geometrycircle.png"/> </a>
       <a href ="../subject?search=trigonometry"> <img class="bubbles subj mathbubbles" id="trigcircle" src="../photos/trigcircle.png"/> </a>
