fix script links

--- a/html/title.html
+++ b/html/title.html
@@ -7,8 +7,6 @@
     </title>
     <link rel="stylesheet" type="text/css" href="../css/title.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script type="text/javascript" src="js/jquery-1.4.1.min.js"></script>
-    <script type="text/javascript"></script>
     <script src="../javascript/allscript.js"></script>
   </head>
   <div style="min-width: 960px; margin: 0 auto;">
@@ -19,12 +17,12 @@
       </a>
       <ul>
         <li>
-          <a href="login.html">
+          <a href="login">
             Page1
           </a>
         </li>
         <li>
-          <a href="users.html">
+          <a href="users">
             Users
           </a>
         </li>
@@ -52,7 +50,7 @@
     </div>
     <div>
       <h1 class="Welcome">Welcome</h1>
-      <img id="sunimage1" src="../photos/bottompic.png"/>
+      <img id="signup" src="../photos/bottompic.png"/>
       <img id="bottompic" src="../photos/bottompic.png"/>
       <a href="/login"<p class="login">Sign Up/Login</p></a>
       <a href="/home"<h2 class="Begin_Journey">Begin Journey</h2></a>
