--- a/html/home.html
+++ b/html/home.html
@@ -16,13 +16,13 @@
       </a>
       <ul>
         <li>
-          <a href="#">
-            Page1
+          <a href="credits">
+            Credits/References
           </a>
         </li>
         <li>
-          <a href="#">
-            Page2
+          <a href="mypage">
+            My Page
           </a>
         </li>
         <li>
@@ -40,11 +40,11 @@
             Page5
           </a>
         </li>
-        <li>
+        <!-- <li>
           <a href="#">
             Page6
           </a>
-        </li>
+        </li> -->
       </ul>
     </div>
     <div>
