--- a/html/title.html
+++ b/html/title.html
@@ -17,18 +17,18 @@
       </a>
       <ul>
         <li>
-          <a href="login">
-            Page1
+          <a href="credits">
+            Credits/References
           </a>
         </li>
         <li>
-          <a href="users">
-            Users
+          <a href="mypage">
+            My Page
           </a>
         </li>
         <li>
           <a href="#">
-            Page3
+            Page 3
           </a>
         </li>
         <li>
@@ -41,11 +41,11 @@
             Home
           </a>
         </li>
-        <li>
+        <!-- <li>
           <a href="#">
             Page6
           </a>
-        </li>
+        </li> -->
       </ul>
     </div>
     <div>
