--- a/html/home.html
+++ b/html/home.html
@@ -21,7 +21,7 @@
           </a>
         </li>
         <li>
-          <a href="mypage">
+          <a href="personal">
             My Page
           </a>
         </li>
