--- a/html/subject.html
+++ b/html/subject.html
@@ -18,13 +18,13 @@
       </a>
       <ul>
         <li>
-          <a href="#">
-            Page1
+          <a href="credits">
+            Credits/References
           </a>
         </li>
         <li>
-          <a href="#">
-            Page2
+          <a href="personal">
+            My Page
           </a>
         </li>
         <li>
