--- a/html/title.html
+++ b/html/title.html
@@ -22,7 +22,7 @@
           </a>
         </li>
         <li>
-          <a href="mypage">
+          <a href="personal">
             My Page
           </a>
         </li>
