Putting links on my page

--- a/html/mypage.html
+++ b/html/mypage.html
@@ -13,6 +13,10 @@
         <li>{{course}}</li>
       {% endfor %}
     </ul>
+    <br>
+    <p><a href={{logouturl}}>Sign out</a></p>
+    <p><a href="home">Browse through courses</a></p>
+    <p><a href="/">Go home</a></p>
 
   </body>
 
