--- a/html/subject.html
+++ b/html/subject.html
@@ -18,13 +18,13 @@
       </a>
       <ul>
         <li>
-          <a href="#">
-            Page1
+          <a href="credits">
+            Credits/References
           </a>
         </li>
         <li>
-          <a href="#">
-            Page2
+          <a href="mypage">
+            My Page
           </a>
         </li>
         <li>
@@ -42,11 +42,11 @@
             Page5
           </a>
         </li>
-        <li>
+        <!-- <li>
           <a href="#">
             Page6
           </a>
-        </li>
+        </li> -->
       </ul>
     </div>
     <img id="subjectmainbackground" src="../photos/compscibackground.jpg"/>
