MAKING THIS AWESOME

--- a/html/newlogin.html
+++ b/html/newlogin.html
@@ -5,9 +5,11 @@
   </head>
 
   <body>
-    <p>Welcome to our page!</p>
-    <p>To keep track of your favorite courses, sign in with your Google account:</p>
-    <a href={{loginurl}}>Sign in</a>
+    <p>{{greeting}}</p>
+    <br>
+    <a href={{home_or_personal}}> {{h_or_p}}>
+    <br>
+    <a href={{login_or_out}}> {{in_out_tag}}>
 
   </body>
 
