--- a/html/title.html
+++ b/html/title.html
@@ -52,7 +52,7 @@
       <h1 class="Welcome">Welcome</h1>
       <img id="signup" src="../photos/bottompic.png"/>
       <a href="/home"<h2 class="Begin_Journey">Begin Journey</h2></a>
-      <a href="/login"<p class="login">Sign Up/Login</p></a>
+      <a href="/login"<p class="login">Login/Logout</p></a>
     </div>
   </body>
 </html>
