Making style sheets for new login and mypage

--- a/html/newlogin.html
+++ b/html/newlogin.html
@@ -7,9 +7,9 @@
   <body>
     <p>{{greeting}}</p>
     <br>
-    <a href={{home_or_personal}}> {{h_or_p}}>
+    <a href={{home_or_personal}}> {{h_or_p}}></a>
     <br>
-    <a href={{login_or_out}}> {{in_out_tag}}>
+    <a href={{login_or_out}}> {{in_out_tag}}></a>
 
   </body>
 
