Organize main and add css and javascript links

--- a/html/newlogin.html
+++ b/html/newlogin.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head lang="en">
     <title>Log in</title>
+    <link rel="stylesheet" type="text/css" href="../css/newlogin.css"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="../javascript/allscript.js"></script>
   </head>
 
   <body>
