--- a/html/mypage.html
+++ b/html/mypage.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Page</title>
+    <title>
+      My Page
+    </title>
+    <link rel="stylesheet" type="text/css" href="../css/mypage.css"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="../javascript/allscript.js"></script>
   </head>
 
   <body>
