Creating credits html page

--- a/html/credits.html
+++ b/html/credits.html
@@ -1,9 +1,50 @@
 <!DOCTYPE html>
 <html>
+  <head>
   <title>
     Credits!
   </title>
+  </head>
   <body>
+    <p>Meet the developers:</p>
+    <div class = 'developers'>
+      <div id='billy'>
+        <div class='myname'>Billy Torres</div>
+        <img class='biopic' src="#"/>
+        <p class='minibio'>
+          Hey guys!
+        </p>
+      </div>
 
+      <div id='sofie'>
+        <div class='myname'>Sofie Cornelis</div>
+        <img class='biopic' src="#"/>
+        <p class='minibio'>
+          Hey guys!
+        </p>
+      </div>
+
+      <div id='andrews'>
+        <div class='myname'>Andrews Figueroa</div>
+        <img class='biopic' src="#"/>
+        <p class='minibio'>
+          Hey guys!
+        </p>
+      </div>
+    </div>
+
+    <div class='References'>
+      <div id='khanapi'>
+        <div class='apiname'>Khan Academy</div>
+      </div>
+
+      <div id='courseraapi'>
+        <div class='apiname'>Coursera API</div>
+      </div>
+
+      <div id='itunesu'>
+        <div class='apiname'>Itunes U</div>
+      </div>
+    </div>
   </body>
 </html>
