--- a/html/credits.html
+++ b/html/credits.html
@@ -4,8 +4,23 @@
   <title>
     Credits!
   </title>
+  <link rel="stylesheet" type="text/css" href="../css/credits.css"/>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="../javascript/allscript.js"></script>
   </head>
   <body>
+    <div class="tsop">
+      <a href="/">
+      </a>
+      <header class="mainHeader">
+        <nav><ul>
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="credits">Credits/References</a></li>
+          <li><a href="personal">My Page</a></li>
+          <li><a href="#">Extrablah</a></li>
+        </ul></nav>
+      </header>
+    </div>
     <p>Meet the developers:</p>
     <div class = 'developers'>
       <div id='billy'>
