--- a/html/home.html
+++ b/html/home.html
@@ -10,42 +10,18 @@
     <script src="../javascript/allscript.js"></script>
   </head>
   <body>
-    <div class="top">
+    <div class="tsop">
       <a href="/">
         <img id="logoimage"src="../photos/pagelogo2.png"height=7% width=4%/>
       </a>
-      <ul>
-        <li>
-          <a href="credits">
-            Credits/References
-          </a>
-        </li>
-        <li>
-          <a href="personal">
-            My Page
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            Page3
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            Page4
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            Page5
-          </a>
-        </li>
-        <!-- <li>
-          <a href="#">
-            Page6
-          </a>
-        </li> -->
-      </ul>
+      <header class="mainHeader">
+    		<nav><ul>
+    			<li class="active"><a href="#">Home</a></li>
+    			<li><a href="credits">Credits/References</a></li>
+    			<li><a href="personal">My Page</a></li>
+    			<li><a href="#">Extrablah</a></li>
+    		</ul></nav>
+    	</header>
     </div>
     <div>
       <h1 class="Welcome"></h1>
