--- a/html/title.html
+++ b/html/title.html
@@ -18,7 +18,7 @@
       <header class="mainHeader">
     		<nav><ul>
     			<li class="active"><a href="#">Home</a></li>
-    			<li><a href="credits">Credits/References</a></li>
+    			<li><a href="credits" target="_blank">Credits/References</a></li>
     			<li><a href="personal">My Page</a></li>
     			<li><a href="#">Extrablah</a></li>
     		</ul></nav>
