--- a/html/subject.html
+++ b/html/subject.html
@@ -56,7 +56,7 @@
       <h3>Coursera:</h3>
       <ul id="courseralinks">
         {% for name, link in coursera_courses.items() %}
-          <li><a href={{link}}> {{name}}</a></li>
+          <li><a href={{link}} target="_blank"> {{name}}</a></li>
           <input type="checkbox" name = "course[]" value="[{{name}},{{link}}]">
         {% endfor %}
       </ul>
