--- a/html/subject.html
+++ b/html/subject.html
@@ -57,7 +57,7 @@
       <ul id="courseralinks">
         {% for name, link in coursera_courses.items() %}
           <li><a href={{link}} target="_blank"> {{name}}</a></li>
-          <input type="checkbox" name = "course[]" value="[{{name}},{{link}}]">
+          <input type="checkbox" name = "courses[]" value="[{{name}},{{link}}]">
         {% endfor %}
       </ul>
       <br>
@@ -66,7 +66,7 @@
       <ul id="khanlinks">
         {% for name, link in khan_courses.items() %}
           <li><a href={{link}}> {{name}}</a></li>
-          <input type="checkbox" name = "course[]" value="[{{name}},{{link}}]">
+          <input type="checkbox" name = "courses[]" value="[{{name}},{{link}}]">
         {% endfor %}
       </ul>
       <br>
@@ -75,11 +75,17 @@
       <ul id="ituneslinks">
         {% for name, link in itunes_courses.items() %}
           <li><a href={{link}}> {{name}}</a></li>
-          <input type="checkbox" name = "course[]" value="[{{name}},{{link}}]">
+          <input type="checkbox" name = "courses[]" value="[{{name}},{{link}}]">
         {% endfor %}
       </ul>
-      <input type="submit" value="Add Course">
+      <input type="submit" value="Add Courses">
     </form>
+    <div></div>
+
+    <!-- {% for name, link in courses.items() %}
+      <li><a href={{link}}> {{name}}</a></li>
+    {% endfor %} -->
+
 
   </body>
 </html>
