adding form to the subject page

--- a/html/subject.html
+++ b/html/subject.html
@@ -82,10 +82,7 @@
     </form>
     <div></div>
 
-    <!-- {% for name, link in courses.items() %}
-      <li><a href={{link}}> {{name}}</a></li>
-    {% endfor %} -->
-
+    courses
 
   </body>
 </html>
