--- a/html/subject.html
+++ b/html/subject.html
@@ -65,7 +65,7 @@
       <h3>Khan Academy:</h3>
       <ul id="khanlinks">
         {% for name, link in khan_courses.items() %}
-          <li><a href={{link}}> {{name}}</a></li>
+          <li><a href={{link}} target="_blank"> {{name}}</a></li>
           <input type="checkbox" name = "courses[]" value="[{{name}},{{link}}]">
         {% endfor %}
       </ul>
@@ -74,7 +74,7 @@
       <h3>iTunes U:</h3>
       <ul id="ituneslinks">
         {% for name, link in itunes_courses.items() %}
-          <li><a href={{link}}> {{name}}</a></li>
+          <li><a href={{link}} target="_blank"> {{name}}</a></li>
           <input type="checkbox" name = "courses[]" value="[{{name}},{{link}}]">
         {% endfor %}
       </ul>
