--- a/html/newlogin.html
+++ b/html/newlogin.html
@@ -6,7 +6,18 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="../javascript/allscript.js"></script>
   </head>
-
+  <div class="tsop">
+    <a href="/">
+    </a>
+    <header class="mainHeader">
+      <nav><ul>
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="credits" target="_blank">Credits/References</a></li>
+        <li><a href="personal">My Page</a></li>
+        <li><a href="#">Extrablah</a></li>
+      </ul></nav>
+    </header>
+  </div>
   <body>
     <p>{{greeting}}</p>
     <br>
