--- a/html/credits.html
+++ b/html/credits.html
@@ -14,7 +14,7 @@
       </a>
       <header class="mainHeader">
         <nav><ul>
-          <li class="active"><a href="#">Home</a></li>
+          <li class="active"><a href="/">Home</a></li>
           <li><a href="credits">Credits/References</a></li>
           <li><a href="personal">My Page</a></li>
           <li><a href="#">Extrablah</a></li>
