--- a/html/subject.html
+++ b/html/subject.html
@@ -52,12 +52,12 @@
     <img id="subjectmainbackground" src="../photos/compscibackground.jpg"/>
     <h1 id="subjecttitle">{{subject.replace("-", " ").title()}}</h1>
 
-      <form action = "personal" method = "get">
+    <form action="personal" method="get">
       <h3>Coursera:</h3>
       <ul id="courseralinks">
         {% for name, link in coursera_courses.items() %}
           <li><a href={{link}} target="_blank"> {{name}}</a></li>
-          <input type="checkbox" name = "courses[]" value="[{{name}},{{link}}]">
+          <input type="radio" name = "courses" value="{{name}}||{{link}}">
         {% endfor %}
       </ul>
       <br>
@@ -66,7 +66,7 @@
       <ul id="khanlinks">
         {% for name, link in khan_courses.items() %}
           <li><a href={{link}} target="_blank"> {{name}}</a></li>
-          <input type="checkbox" name = "courses[]" value="[{{name}},{{link}}]">
+          <input type="radio" name = "courses" value="{{name}}||{{link}}">
         {% endfor %}
       </ul>
       <br>
@@ -75,14 +75,12 @@
       <ul id="ituneslinks">
         {% for name, link in itunes_courses.items() %}
           <li><a href={{link}} target="_blank"> {{name}}</a></li>
-          <input type="checkbox" name = "courses[]" value="[{{name}},{{link}}]">
+          <input type="radio" name = "courses" value="{{name}}||{{link}}">
         {% endfor %}
       </ul>
       <input type="submit" value="Add Courses">
     </form>
     <div></div>
-
-    courses
 
   </body>
 </html>
