--- a/html/title.html
+++ b/html/title.html
@@ -9,11 +9,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="../javascript/allscript.js"></script>
   </head>
-  <div style="min-width: 960px; margin: 0 auto;">
+  <div style="min-width: auto; margin: 0 auto;">
   <body>
     <div class="tsop">
       <a href="/">
-        <img id="logoimage"src="../photos/pagelogo2.png"height=7% width=4%/>
       </a>
       <header class="mainHeader">
     		<nav><ul>
@@ -26,7 +25,6 @@
     </div>
     <div>
       <h1 class="Welcome">Welcome</h1>
-      <img id="signup" src="../photos/bottompic.png"/>
       <a href="/home"<h2 class="Begin_Journey">Begin Journey</h2></a>
       <a href="/login"<p class="login">Login/Logout</p></a>
     </div>
