--- a/html/mypage.html
+++ b/html/mypage.html
@@ -5,8 +5,8 @@
       My Page
     </title>
     <!-- <link rel="stylesheet" type="text/css" href="../css/mypage.css"/> -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="../javascript/allscript.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="../javascript/allscript.js"></script> -->
   </head>
 
   <body>
