bubbles in the subject html,css

--- a/html/credits.html
+++ b/html/credits.html
@@ -25,7 +25,7 @@
     <div class = 'developers'>
       <div id='billy'>
         <div class='myname'>Billy Torres</div>
-        <img class='biopic' src="#"/>
+        <img class='biopic' src="../photos/circleimage.png"/>
         <p class='minibio'>
           Hey guys!
         </p>
@@ -33,7 +33,7 @@
 
       <div id='sofie'>
         <div class='myname'>Sofie Cornelis</div>
-        <img class='biopic' src="#"/>
+        <img class='biopic' src="../photos/circleimage.png"/>
         <p class='minibio'>
           Hey guys!
         </p>
@@ -41,7 +41,7 @@
 
       <div id='andrews'>
         <div class='myname'>Andrews Figueroa</div>
-        <img class='biopic' src="#"/>
+        <img class='biopic' src="../photos/circleimage.png"/>
         <p class='minibio'>
           Hey guys!
         </p>
