css changes to credits page

--- a/html/credits.html
+++ b/html/credits.html
@@ -21,29 +21,29 @@
         </ul></nav>
       </header>
     </div>
-    <p>Meet the developers:</p>
+    <p id="meet">Meet the developers:</p>
     <div class = 'developers'>
       <div id='billy'>
         <div class='myname'>Billy Torres</div>
-        <img class='biopic' src="../photos/circleimage.png"/>
+        <img class='biopic' src="../photos/billypic.png"/>
         <p class='minibio'>
-          Hey guys!
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla molestie in dolor sed efficitur. Praesent posuere ante a venenatis feugiat. In hac habitasse platea dictumst. Phasellus ultricies ligula quam, eu malesuada ipsum pulvinar eu. Donec ante orci, volutpat at orci ac, finibus rhoncus leo. Vivamus vitae sapien vel enim convallis consectetur. Suspendisse tempus scelerisque cursus.
         </p>
       </div>
 
       <div id='sofie'>
         <div class='myname'>Sofie Cornelis</div>
-        <img class='biopic' src="../photos/circleimage.png"/>
+        <img class='biopic' src="../photos/sofiepic.png"/>
         <p class='minibio'>
-          Hey guys!
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla molestie in dolor sed efficitur. Praesent posuere ante a venenatis feugiat. In hac habitasse platea dictumst. Phasellus ultricies ligula quam, eu malesuada ipsum pulvinar eu. Donec ante orci, volutpat at orci ac, finibus rhoncus leo. Vivamus vitae sapien vel enim convallis consectetur. Suspendisse tempus scelerisque cursus.
         </p>
       </div>
 
       <div id='andrews'>
         <div class='myname'>Andrews Figueroa</div>
-        <img class='biopic' src="../photos/circleimage.png"/>
-        <p class='minibio'>
-          Hey guys!
+        <img class='biopic' src="../photos/andrewpic.png"/>
+        <p class="outside" class='minibio'>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla molestie in dolor sed efficitur. Praesent posuere ante a venenatis feugiat. In hac habitasse platea dictumst. Phasellus ultricies ligula quam, eu malesuada ipsum pulvinar eu. Donec ante orci, volutpat at orci ac, finibus rhoncus leo. Vivamus vitae sapien vel enim convallis consectetur. Suspendisse tempus scelerisque cursus.
         </p>
       </div>
     </div>
