--- a/html/mypage.html
+++ b/html/mypage.html
@@ -15,14 +15,13 @@
       </a>
       <header class="mainHeader">
     		<nav><ul>
-    			<li class="active"><a href="#">Home</a></li>
+    			<li class="active"><a href="home">Home</a></li>
     			<li><a href="credits" target="_blank">Credits/References</a></li>
     			<li><a href="personal">My Page</a></li>
     			<li><a href="#">Extrablah</a></li>
     		</ul></nav>
     	</header>
     </div>
-
   <body>
     <div id="welcomeuser">
       <h1>Welcome {{nickname}}!</h1>
@@ -34,7 +33,7 @@
       {% endfor %}
     </ul>
     <br>
-    <p><a href={{logouturl}}>Sign out</a></p>
+    <p><a id="signout" href={{logouturl}}>Sign out</a></p>
     <p><a href="home">Browse through courses</a></p>
     <p><a href="/">Go home</a></p>
     <video autoplay loop poster="../photos/mypagevideobackground.mp4" id="bgvid">
