edits to javascript fade and css in several pages

--- a/html/title.html
+++ b/html/title.html
@@ -25,7 +25,9 @@
     </div>
     <div>
       <h1 class="Welcome">Welcome</h1>
+    <div id="begin1">
       <a href="/home"<h2 class="Begin_Journey">Begin Journey</h2></a>
+    </div>
       <a href="/login"<p class="login">Login/Logout</p></a>
     </div>
   </body>
