Edit credits page

--- a/html/credits.html
+++ b/html/credits.html
@@ -35,7 +35,7 @@
         <div class='myname'>Sofie Cornelis</div>
         <img class='biopic' src="../photos/sofiepic.png"/>
         <p class='minibio'>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla molestie in dolor sed efficitur. Praesent posuere ante a venenatis feugiat. In hac habitasse platea dictumst. Phasellus ultricies ligula quam, eu malesuada ipsum pulvinar eu. Donec ante orci, volutpat at orci ac, finibus rhoncus leo. Vivamus vitae sapien vel enim convallis consectetur. Suspendisse tempus scelerisque cursus.
+          Hey everyone! My name is Sofie Cornelis and I'm from Manhattan, New York. I will be attending Cornell University in Ithaca, majoring in Information Science and possibly minoring in Food Science and Math. These past three week at CSSI have been amazing. Thank you to all of the instructors, TA, and the other googlers that helped make this possible.
         </p>
       </div>
 
