Fixing links on personal

--- a/html/mypage.html
+++ b/html/mypage.html
@@ -29,7 +29,7 @@
     <p>Here are your courses:</p>
     <ul>
       {% for course in courses %}
-        <li>{{course}}</li>
+        <li><a href={{course.split("||")[1]}} target="_blank"> {{course.split("||")[0]}}</a></li>
       {% endfor %}
     </ul>
     <br>
