--- a/html/subject.html
+++ b/html/subject.html
@@ -53,7 +53,7 @@
           <input type="radio" name = "chosen_course" value="{{name}}||{{link}}">
         {% endfor %}
       </ul>
-      <input type="submit" value="Add Courses">
+      <input type="submit" value="Add Course">
     </form>
     <div></div>
 
