--- a/html/title.html
+++ b/html/title.html
@@ -16,9 +16,9 @@
       </a>
       <header class="mainHeader">
     		<nav><ul>
-    			<li class="active"><a href="#">Home</a></li>
+    			<li><a href="#">Home</a></li>
+          <li><a href="personal">My Page</a></li>
     			<li><a href="credits">Credits/References</a></li>
-    			<li><a href="personal">My Page</a></li>
     			<li><a href="#">Extrablah</a></li>
     		</ul></nav>
     	</header>
